# diceng

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
examples/: bun-ffi.ts
scripts/: prompt-install.sh
src/: display.rs  ffi.rs  lib.rs  main.rs  types.rs
src/parser/: ast.rs  error.rs  lexer.rs  mod.rs  pratt.rs
src/roller/: eval.rs  mod.rs  rng.rs
src/stats/: exact.rs  mod.rs  monte_carlo.rs  result.rs
tests/: integration.rs
